fix: counter-area gap sm

--- a/css/style.css
+++ b/css/style.css
@@ -6574,6 +6574,11 @@ body.admin-bar .header-menu-area.sticky_menu {
     margin-right: 0;
   }
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .counter-area.style-1 .elementor-container .fun-fact-area .counter-items-box .elementor-container {
+    gap: 12px;
+  }
+}
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .counter-area .elementor-container {
     gap: 12px 0;
